<resources>
    <string name="app_name">FieldSurvey</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginbutton">LOGIN</string>
    <string name="registrationbutton">No account yet? Create one</string>
    <string name="register"> Register</string>
    <string name="name">Name</string>
    <string name="registeremail">Email</string>
    <string name="registerpass">Password</string>
    <string name="registerbutton">Register</string>
    <string name="loading">Loading…</string>
    <string name="signout">Sign Out</string>
    <string name="planttitle">New Plant</string>
    <string name="txplantspecies">Plant species</string>
    <string name="txhungarianname">Hungarian name</string>
    <string name="txlatinname">Latin name</string>
    <string name="btnAddPlant">ADD PLANT</string>
    <string name="txFurnitureTitle">New Furniture</string>
    <string name="txfurnituretype">Type</string>
    <string name="txfurniturematerial">Material</string>
    <string name="btnAddFurniture">ADD FURNITURE</string>
    <string name="addplantimage">Capture and Upload image</string>
    <string name="your_image">Your image</string>
    <string-array name="Species">
        <item>Fenyő </item>
        <item>Boróka</item>
        <item>Luccfenyő</item>
        <item>Cédrusok</item>
        <item>Hársfa</item>
        <item>Liliomfa</item>
        <item>Juharok</item>

    </string-array>
    <string-array name="Type">
        <item>asztal</item>
        <item>pad</item>
        <item>vaza</item>
        <item>viragtarto</item>
    </string-array>
    <string-array name="Material">
        <item>fa</item>
        <item>fem</item>
        <item>aluminium</item>
        <item>szalma</item>
    </string-array>
    <string name="addFurnitureImage">Capture image</string>
    <string name="text">TEST TEST TEST</string>
    <string name="newProject"> Create new project</string>
    <string name="projectName">Project Name</string>
    <string name="location">Location</string>
    <string name="save">Remember</string>
    <string name="home">Home</string>
    <string name="logOuut">Log Out</string>
    <string name="add">Add</string>
</resources>
