<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/home"/>

    <item
        android:id="@+id/navigation_logout"
        android:icon="@drawable/logout"
        android:title="@string/logOuut"/>
    <item
        android:id="@+id/navigation_addProject"
        android:icon="@drawable/ic_add_circle"
        android:title="@string/newProject"/>
    <item
        android:id="@+id/navigation_addItem"
        android:icon="@drawable/ic_add_circle"
        android:title="@string/add"/>
    <item
        android:id="@+id/navigation_save"
        android:icon="@drawable/save"
        android:title="Save PDF"
    />



</menu>