<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorBackground"
    android:layout_height="match_parent"
    tools:context=".Activities.AddPlantActivity">

    <TextView
        android:id="@+id/plantTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/planttitle"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="30dp">

        <TextView
            android:id="@+id/tvPlantSpecies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txplantspecies"
            android:textSize="15sp"/>

        <Spinner
            android:id="@+id/spinnerspecies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/mySpinnerItemStyle"/>

        <TextView
            android:id="@+id/tvHunName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txhungarianname"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/etHunName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:backgroundTint="#FFFFFF"
            android:ems="10"/>

        <TextView
            android:id="@+id/tvLatinName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/txlatinname"/>

        <EditText
            android:id="@+id/etLatinName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:backgroundTint="#FFFFFF"
            android:ems="10" />
        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/location"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etLocationNumber"
            android:inputType="number"
            android:textColor="@color/colorText"
            android:backgroundTint="#FFFFFF" />


        <Button
            android:id="@+id/addImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:text="@string/addplantimage" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/imageViewPlant"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/your_image"
            android:id="@+id/imageLabel"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/addPlant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:onClick="AddTODataBase"
            android:text="@string/btnAddPlant" />

    </LinearLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@color/colorGray"
        app:itemTextColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />


</androidx.constraintlayout.widget.ConstraintLayout>