<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFurnitureActivity">
    <TextView
        android:id="@+id/tvFurnitureTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/txFurnitureTitle"
        android:textColor="#367738"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="30dp">

        <TextView
            android:id="@+id/tvFurnitureType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txfurnituretype"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinnerfurntype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvFurnitureType"
            android:hint="Type" />

        <TextView
            android:id="@+id/tvFurnMaterial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txfurniturematerial"
            android:layout_below="@+id/spinnerfurntype"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinnerfurnmaterial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvFurnMaterial"
            android:hint="Material" />

        <Button
            android:id="@+id/addFurniture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinnerfurnmaterial"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:onClick="AddtoDataBase"
            android:text="@string/btnAddFurniture" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>